--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,5 +1,4 @@
-% This file was created with JabRef 2.9.2.
-% Encoding: ISO8859_1
+% Encoding: ISO-8859-1
 
 @ARTICLE{LIGOProspects13,
   author = {{Abbott}, B.~P. and {Abbott}, R. and {Abbott}, T.~D. and {Abernathy},
@@ -2052,3 +2051,60 @@
     doi = {10.1103/PhysRevD.87.024035},
     url = {http://link.aps.org/doi/10.1103/PhysRevD.87.024035}
 }
+
+@Article{Pan+11,
+  author        = {Pan, Yi and Buonanno, Alessandra and Boyle, Michael and Buchman, Luisa T. and Kidder, Lawrence E. and Pfeiffer, Harald P. and Scheel, Mark A.},
+  title         = {{Inspiral-merger-ringdown multipolar waveforms of nonspinning black-hole binaries using the effective-one-body formalism}},
+  journal       = {Phys. Rev.},
+  year          = {2011},
+  volume        = {D84},
+  pages         = {124052},
+  archiveprefix = {arXiv},
+  doi           = {10.1103/PhysRevD.84.124052},
+  eprint        = {1106.1021},
+  primaryclass  = {gr-qc},
+  slaccitation  = {%%CITATION = ARXIV:1106.1021;%%},
+}
+
+@Article{BD00,
+  author       = {Buonanno, A. and Damour, T.},
+  title        = {Transition from inspiral to plunge in binary black hole coalescences},
+  journal      = {Phys. Rev. D},
+  year         = {2000},
+  volume       = {62},
+  pages        = {064015},
+  eprint       = {gr-qc/0001013},
+  slaccitation = {%%CITATION = GR-QC 0001013;%%},
+}
+
+@Article{Cotesta+18,
+  author        = {Cotesta, Roberto and Buonanno, Alessandra and Bohé, Alejandro and Taracchini, Andrea and Hinder, Ian and Ossokine, Serguei},
+  title         = {{Enriching the Symphony of Gravitational Waves from Binary Black Holes by Tuning Higher Harmonics}},
+  journal       = {Phys. Rev.},
+  year          = {2018},
+  volume        = {D98},
+  number        = {8},
+  pages         = {084028},
+  archiveprefix = {arXiv},
+  doi           = {10.1103/PhysRevD.98.084028},
+  eprint        = {1803.10701},
+  primaryclass  = {gr-qc},
+  slaccitation  = {%%CITATION = ARXIV:1803.10701;%%},
+}
+
+@Article{Varma+18,
+  author        = {Varma, Vijay and Field, Scott E. and Scheel, Mark A. and Blackman, Jonathan and Kidder, Lawrence E. and Pfeiffer, Harald P.},
+  title         = {{Surrogate model of hybridized numerical relativity binary black hole waveforms}},
+  journal       = {Phys. Rev.},
+  year          = {2019},
+  volume        = {D99},
+  number        = {6},
+  pages         = {064045},
+  archiveprefix = {arXiv},
+  doi           = {10.1103/PhysRevD.99.064045},
+  eprint        = {1812.07865},
+  primaryclass  = {gr-qc},
+  slaccitation  = {%%CITATION = ARXIV:1812.07865;%%},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
