--- a/paper/paper_PE.tex
+++ b/paper/paper_PE.tex
@@ -75,6 +75,7 @@
 \author{Sylvain Marsat}
 \affiliation{APC, AstroParticule et Cosmologie, Universit\'{e} Paris Diderot, CNRS/IN2P3, CEA/Irfu, Observatoire de Paris, Sorbonne Paris Cit\'{e}, 10, rue Alice Domon et L\'{e}onie Duquet 75205 PARIS Cedex 13, France}
 \author{Tito Dal Canton}
+\thanks{NASA Postdoctoral Program fellow}
 \affiliation{Gravitational Astrophysics Laboratory, NASA Goddard Space Flight Center, 8800 Greenbelt Rd., Greenbelt, MD 20771, USA}
 
 
@@ -1208,6 +1209,14 @@ Note that the expressions for the channel $e$ can be obtained from the expressio
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{acknowledgments}
+
+TDC was supported by an appointment to the NASA Postdoctoral Program at the
+Goddard Space Flight Center, administered by Universities Space Research
+Association under contract with NASA.
+
+\end{acknowledgments}
 
 \bibliography{references.bib}
 
